hero section added

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div id="banner">
             <!-- box-01 -->
              <div class="banner-content">
-                <h1> From <br> SouthEast Asia <br> <span>To The World</span>.</h1>
+                <h1> From <br> SouthEast Asia <br> <span>To The World.</span></h1>
                 <p>Stay updated with travel tips, recommendations, and latest promos.</p>
                 
                 <div class="button-box">
-                    <button> Get Started</button>
-                    <button> Watch Demo</button>
+                    <button class="btn"> Get Started</button>
+                    <button class="btn-white"> Watch Demo</button>
                 </div>
 
              </div>
